--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,4 @@
-<div class="header container-fluid" id="myHeader" style="
-    display: flex;
-    flex-wrap: wrap;
-    background-color: #26253d;
-    position: fixed;
-    z-index: 999;
-    padding-top: 12px;
-  ">
+<div class="header container-fluid" id="myHeader">
   <div class="col-lg-5 d-flex flex-wrap align-items-center justify-content-lg-between">
     <div class="mobile-nav">
       <div id="mobilemenu">
@@ -35,7 +28,7 @@
             </div>
 
 
-           
+
 
             <!-- <button
             class="
@@ -92,8 +85,9 @@
               <!--              </ul>-->
               <!--            </div>-->
 
-              <div class="d-flex align-items-center text-center" style="gap: 1em">
-                <a class="btn btn-primary wallet h-50 text-white" href="https://forms.gle/tttE2vRWUN2H9rLH9" target="_blank">
+              <div class="d-flex align-items-center text-center mt-5" style="gap: 1em">
+                <a class="btn btn-primary wallet h-50 text-white text-capitalize" href="https://forms.gle/tttE2vRWUN2H9rLH9"
+                  target="_blank">
                   Beyond Owl launch pad
                 </a>
               </div>
@@ -103,7 +97,7 @@
                   <li _ngcontent-xlj-c232=""><a _ngcontent-xlj-c232="" href="https://twitter.com/Beyondowl"
                       target="_blank"><img _ngcontent-xlj-c232="" src="assets/twitter_vector.png"
                         class="img-responsive"></a></li>
-                  <li _ngcontent-xlj-c232=""><a _ngcontent-xlj-c232="" href="https://discord.com/invite/beyondowls"
+                  <li _ngcontent-xlj-c232=""><a _ngcontent-xlj-c232="" href="https://discord.com/invite/FDe2E2XsCJ"
                       target="_blank"><img _ngcontent-xlj-c232="" src="assets/discord-logo.png"
                         class="img-responsive"></a></li>
                 </ul>
@@ -219,7 +213,7 @@
             <a routerLinkActive="active" routerLink="/nft-collection" queryParamsHandling="merge" onclick="closeNav()">
               <img class="sidebar-icon" src="assets/NFT.png" alt="reservation" />
               <br />
-              <label class="mb-0 app-item-text">NFT Collection</label>
+              <label class="mb-0 app-item-text">NFT Launch Pad</label>
             </a>
           </div>
           <!-- <div>
@@ -331,12 +325,12 @@
           </div>
 
           <div>
-          <a class="sidebar-menu-item" routerLinkActive="active" routerLink="/owl-story" queryParamsHandling="merge">
-            <img class="sidebar-icon" src="assets/owl-story.png" alt="owl_story" />
-            <br />
-            <label class="mb-0 app-item-text">More Info</label>
-          </a>
-        </div>
+            <a class="sidebar-menu-item" routerLinkActive="active" routerLink="/owl-story" queryParamsHandling="merge">
+              <img class="sidebar-icon" src="assets/owl-story.png" alt="owl_story" />
+              <br />
+              <label class="mb-0 app-item-text">More Info</label>
+            </a>
+          </div>
           <!-- <div>
           <a
             routerLinkActive="active"
@@ -382,12 +376,15 @@
           </video>         <img class="logo_video" src="assets/owl_logo_new_02.png" />
       </a>
     </span> -->
-    <span class="grise"><a routerlink="" href="#/"><img src="https://www.linkpicture.com/q/owl_logo_new_02-1.png"
-          class="logo_video"></a></span>
+    <span class="grise">
+      <a routerlink="" href="#/">
+        <img src="https://www.linkpicture.com/q/owl_logo_new_02-1.png" class="logo_video">
+      </a>
+    </span>
     <!-- <span class="grise"><a class="" routerlink="" href="#/"><img src="https://www.linkpicture.com/q/owl_logo_new_02-2.png" class="logo2"></a></span> -->
     <!-- <span class="moon-text">A METAVERSE ON MOON</span> -->
 
-    
+
 
   </div>
   <!--<div class="col-sm-1 d-lg-flex d-none justify-content-center">
@@ -467,7 +464,7 @@
   <div class="d-lg-flex d-none justify-content-center align-items-center h-100">
     <button class="btn btn-primary wallet d-flex align-items-center">
       <a href="https://forms.gle/tttE2vRWUN2H9rLH9" target="_blank" class="fs-6">Beyond Owl launch pad</a>
-     
+
     </button>
   </div>
   <!-- <div class="col-lg-2 d-lg-block d-none mr-0">
@@ -686,7 +683,7 @@
       <ul class="d-flex my-auto">
         <li><a href="https://twitter.com/Beyondowl" target="_blank"><img src="assets/twitter_vector.png"
               class="img-responsive" /></a></li>
-        <li><a href="https://discord.com/invite/beyondowls" target="_blank"><img src="assets/discord-logo.png"
+        <li><a href="https://discord.com/invite/FDe2E2XsCJ" target="_blank"><img src="assets/discord-logo.png"
               class="img-responsive" /></a></li>
         <!--        <li><a href="https://t.me/beyondowl" target="_blank"><img src="assets/telegram.png" class="img-responsive"/></a></li>-->
         <!--        <li><a href="https://www.instagram.com/beyondowls/" target="_blank"><img src="assets/instagram.png" class="img-responsive"/></a></li>-->
@@ -794,7 +791,10 @@
 
 
   </div>
-  <div class="align-items-center justify-content-start md-aptos-wallet d-none"
+
+  <!-- First blue chip nft on APTos removed -->
+ 
+  <div class="align-items-center justify-content-start md-aptos-wallet d-none d-lg-none d-md-none"
     style="flex:1; margin-left: 5%; gap: 1em">
     <div style="width: 3.5rem; height: 3.5rem">
       <svg fill="#FFF" data-name="Icon Logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 60 60">
@@ -815,6 +815,8 @@
     <p class="text-white text-nowrap pt-2">First blue chip nft on APTos</p>
   </div>
 </div>
+
+<!--  -->
 
 <div class="container-fluid text-center" style="height: auto">
   <div class="row content desktop">
@@ -860,7 +862,7 @@
         <a class="sidebar-menu-item" routerLinkActive="active" routerLink="/nft-collection" queryParamsHandling="merge">
           <img class="sidebar-icon" src="assets/NFT.png" alt="reservation" />
           <br />
-          <label class="mb-0 app-item-text">NFT Collection</label>
+          <label class="mb-0 app-item-text">NFT Launch Pad</label>
         </a>
 
         <!-- <a
