--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,12 +21,21 @@
 }
 .header {
   overflow: hidden;
-  background-color: #f1f1f1;
-  padding: 0px;
+  // background-color: #f1f1f1;
+  // padding: 0px;
   align-items: center;
   justify-content: space-between;
+
+  display: flex;
+  flex-wrap: wrap;
+  background-color: #26253d;
+  position: fixed;
+  z-index: 999;
+  padding-top: 12px;
+  padding-bottom: 12px;
+
   @media (min-width: 992px) {
-    height: 128px;
+    height: 100px;
   }
 }
 .truncate {
@@ -149,7 +158,7 @@
   }
 }
 .logo_video {
-  max-width: 342px;
+  max-width: 250px;
 
   @media (max-width: 991px) {
     max-width: 200px;
@@ -532,8 +541,8 @@ img.logo2 {
   // padding-top: 107px;
   // padding-left: 53px;
   // height: 100vh;
-  height: calc(100vh - 128px);
-  margin-top: 128px;
+  height: calc(100vh - 100px);
+  margin-top: 100px;
   margin-left: 120px;
 }
 
@@ -602,7 +611,7 @@ img.logo2 {
   .router-outlet {
     padding-top: 0px;
     height: calc(100vh - 65px);
-    margin-top: 65px;
+    margin-top: 37px;
     margin-left: 0px;
   }
 }
