--- a/src/styles.scss
+++ b/src/styles.scss
@@ -372,7 +372,21 @@ button:focus,
     //display: none !important;
   }
 
-  .md-aptos-wallet {
-    display: flex !important;
-  }
+  // .md-aptos-wallet {
+  //   display: flex !important;
+  // }
+}
+
+.fs-16{
+  font-size: 16px;
+}
+.fs-20{
+  font-size: 20px;
+}
+.fs-30{
+  font-size: 30px;
+}
+
+.text-logo-color {
+  color: #38ff14 !important;
 }
