--- a/src/app/components/nft-collection/nft-collection.component.html
+++ b/src/app/components/nft-collection/nft-collection.component.html
@@ -11,8 +11,8 @@
                         <app-count-down></app-count-down>
                         <div class="line-splitter"></div>
 
-                        <p class="fs-25 lh-3">3000 utility based NFTs working hard for you on APTOs block chain. All 3000 NFts will give
-                            access to all programs that get release on the Owl platform</p>
+                        <p class="fs-25 lh-3">Beyond owl NFTs will give you access to all programs that get released on the owl platform.</p>
+                        <p class="fs-25 lh-3">Apply launchpad</p>
 
                         <div class="d-flex justify-content-start">
                             <div class="bg-secondary rounded fs-16 p-3 m-2">
