--- a/src/app/components/nft-collection/nft-collection.component.scss
+++ b/src/app/components/nft-collection/nft-collection.component.scss
@@ -305,7 +305,7 @@ h1 {
 }
 
 .bg-nft-box {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.88), rgba(0, 0, 0, 0.9)), url(https://i.imgur.com/0BRq1K2.jpg);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.88), rgba(0, 0, 0, 0.9)), url('../../../assets/MOON-LANDING_BANNER_2.jpg');
   background-position: center center;
   background-size: cover;
   overflow: hidden;
