--- a/src/styles.scss
+++ b/src/styles.scss
@@ -356,10 +356,8 @@ button:focus,
   background: linear-gradient(89.02deg, #6226d9 0.89%, #8c52ff 100%) !important;
   border-radius: 10px;
   margin: 5px;
-  min-width: 200px;
   margin: 0;
   font-size: 14px;
-  height: 3em;
 }
 
 .md-aptos-wallet {
@@ -377,16 +375,26 @@ button:focus,
   // }
 }
 
-.fs-16{
-  font-size: 16px;
+.fs-15 {
+  font-size: 15px !important;
 }
-.fs-20{
-  font-size: 20px;
+
+.fs-16 {
+  font-size: 16px !important;
 }
-.fs-30{
-  font-size: 30px;
+
+.fs-20 {
+  font-size: 20px !important;
+}
+
+.fs-30 {
+  font-size: 30px !important;
 }
 
 .text-logo-color {
   color: #38ff14 !important;
+}
+
+.btn {
+  border-radius: 10px !important;
 }
