--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="header container-fluid" id="myHeader">
   <div class="col-lg-5 d-flex flex-wrap align-items-center justify-content-lg-between">
-    <div class="mobile-nav">
+    <div class="mobile-nav mr-3">
       <div id="mobilemenu">
         <div id="mySidenav" class="sidenav">
           <span href="javascript:void(0)" class="closebtn" onclick="closeNav()" style="color: #fff">&times;</span>
@@ -88,7 +88,7 @@
               <div class="d-flex align-items-center text-center mt-5" style="gap: 1em">
                 <a class="btn btn-primary wallet h-50 text-white text-capitalize" href="https://forms.gle/tttE2vRWUN2H9rLH9"
                   target="_blank">
-                  Beyond Owl launch pad
+                  Apply Launch Pad
                 </a>
               </div>
 
@@ -461,12 +461,6 @@
     <p class="text-white text-nowrap pt-2">First blue chip nft on APTos</p>
   </div>
 
-  <div class="d-lg-flex d-none justify-content-center align-items-center h-100">
-    <button class="btn btn-primary wallet d-flex align-items-center">
-      <a href="https://forms.gle/tttE2vRWUN2H9rLH9" target="_blank" class="fs-6">Beyond Owl launch pad</a>
-
-    </button>
-  </div>
   <!-- <div class="col-lg-2 d-lg-block d-none mr-0">
     <div class="header-center-container">
       <div class="col-12 px-0">
@@ -533,7 +527,7 @@
     </a> &ndash;&gt;
   </div>-->
 
-  <div class="col-lg-4 d-lg-flex d-none align-items-center justify-content-end forlogin-nami pl-0">
+  <div class="col-lg-6 d-lg-flex d-none align-items-center justify-content-end forlogin-nami pl-0">
 
 
 
@@ -653,13 +647,19 @@
     <!-- <a href="https://forms.sendpulse.com/6d3584fad8/" target="_blank" class="mr-4">
       Subscribe
     </a> -->
+
+    <button class="btn btn-primary bg-gradient d-flex align-items-center mx-2">
+      <a href="https://forms.gle/tttE2vRWUN2H9rLH9" target="_blank" class="fs-15 text-white text-decoration-none">Apply Launch Pad</a>
+    </button>
+
     <div *ngIf="state$ | async; else elseBlock">
-      <button class="btn btn-primary wallet">{{truncAddress(state$ | async)}}</button>
+      <button class="btn btn-primary bg-gradient d-flex align-items-center fs-15 mx-2">{{truncAddress(state$ | async)}}</button>
     </div>
+
     <ng-template #elseBlock>
-      <button class="btn btn-primary wallet d-flex align-items-center" (click)="openWalletDialog()">
+      <button class="btn btn-primary bg-gradient d-flex align-items-center fs-15 mx-2" (click)="openWalletDialog()">
         <div class="px-2">
-          <svg height="25" width="25" fill="#FFF" data-name="Icon Logo" xmlns="http://www.w3.org/2000/svg"
+          <svg height="20" width="20" fill="#FFF" data-name="Icon Logo" xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 60 60">
             <path
               d="M46.47,20.07H41.16a2.15,2.15,0,0,1-1.61-.72l-2.16-2.42a1.69,1.69,0,0,0-2.53,0L33,19a3.21,3.21,0,0,1-2.39,1.07h-29A30.26,30.26,0,0,0,0,27.48H27.42a1.78,1.78,0,0,0,1.28-.54l2.56-2.66a1.67,1.67,0,0,1,1.22-.52h.1a1.7,1.7,0,0,1,1.27.57L36,26.75a2.17,2.17,0,0,0,1.61.73H60a30.26,30.26,0,0,0-1.58-7.41h-12Z">
@@ -680,10 +680,10 @@
     </ng-template>
 
     <div class="soical_icon">
-      <ul class="d-flex my-auto">
-        <li><a href="https://twitter.com/Beyondowl" target="_blank"><img src="assets/twitter_vector.png"
+      <ul class="d-flex my-auto list-style-none">
+        <li class="mx-2"><a href="https://twitter.com/Beyondowl" target="_blank" ><img src="assets/twitter_vector.png"
               class="img-responsive" /></a></li>
-        <li><a href="https://discord.com/invite/FDe2E2XsCJ" target="_blank"><img src="assets/discord-logo.png"
+        <li class="mx-2"><a href="https://discord.com/invite/FDe2E2XsCJ" target="_blank"><img src="assets/discord-logo.png"
               class="img-responsive" /></a></li>
         <!--        <li><a href="https://t.me/beyondowl" target="_blank"><img src="assets/telegram.png" class="img-responsive"/></a></li>-->
         <!--        <li><a href="https://www.instagram.com/beyondowls/" target="_blank"><img src="assets/instagram.png" class="img-responsive"/></a></li>-->
