--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -339,7 +339,7 @@
         <!-- <div class="container"> -->
 
         <div class="col-md-12 col-md-offset-6 mx-auto">
-          <div class="d-flex flex-wrap w-100 justify-content-md-between justify-content-center mt-5 pt-md-5 pt-0">
+          <div class="d-flex flex-wrap w-100 justify-content-md-between justify-content-center">
 
             <div class="col-xl-5 col-md-12">
               <div class="d-flex w-100 flex-wrap justify-content-between my-5">
@@ -361,49 +361,49 @@
                <h1 class="text-white"> 3000 Utility Based NFTs living on the APTOs block chain </h1>
               </div>
 
-              <div class="d-flex w-100 flex-wrap justify-content-between mt-2 mb-5">
+              <div class="d-flex w-100 flex-wrap justify-content-between my-3">
                 <div class="col-md-8 text-center text-md-left d-flex align-items-center">
-                  <p class="text-logo-color fs-15 mb-0">AI price prediction platform for crypto currencies</p>
+                  <i class="fa fa-circle text-logo-color mr-2"></i> <p class="text-logo-color fs-15 mb-0">  AI price prediction platform for crypto currencies</p>
                 </div>
                 <div class="col-md-4">
-                  <a  href="/assets/AI-Story-Page.pdf" target="_blank" class="btn btn-primary bg-gradient  fs-15">Read
+                  <a  href="assets/AI-Story-Page.pdf" target="_blank" class="btn btn-primary bg-gradient  fs-15">Read
                     more</a>
                 </div>
               </div>
-              <div class="d-flex w-100 flex-wrap justify-content-between my-5">
+              <div class="d-flex w-100 flex-wrap justify-content-between my-3">
                 <div class="col-md-8 text-center text-md-left d-flex align-items-center">
-                  <p class="text-logo-color fs-15 mb-0">Owly bird game double token rewards for NFT Holders</p>
+                  <i class="fa fa-circle text-logo-color mr-2"></i> <p class="text-logo-color fs-15 mb-0"> Owly bird game double token rewards for NFT Holders</p>
                 </div>
                 <div class="col-md-4">
-                  <a  href="/assets/Owly Bird Game.pdf" target="_blank" class="btn btn-primary bg-gradient rounded-4 fs-15">Read
+                  <a  href="assets/Owly Bird Game.pdf" target="_blank" class="btn btn-primary bg-gradient rounded-4 fs-15">Read
                     more</a>
                 </div>
               </div>
 
-              <div class="d-flex w-100 flex-wrap justify-content-between my-5">
+              <div class="d-flex w-100 flex-wrap justify-content-between my-3">
                 <div class="col-md-8 text-center text-md-left d-flex align-items-center">
-                  <p class="text-logo-color fs-15 mb-0">Algorithmic trading bot</p>
+                  <i class="fa fa-circle text-logo-color mr-2"></i>  <p class="text-logo-color fs-15 mb-0"> Algorithmic trading bot</p>
                 </div>
                 <div class="col-md-4">
-                  <a  href="/assets/Algorithmic Trading Bot.pdf" target="_blank" class="btn btn-primary bg-gradient rounded-4 fs-15">Read
+                  <a  href="assets/Algorithmic Trading Bot.pdf" target="_blank" class="btn btn-primary bg-gradient rounded-4 fs-15">Read
                     more</a>
                 </div>
               </div>
 
               <p class="text-white nfsize2">AND</p>
-              <div class="d-flex w-100 flex-wrap justify-content-between my-5">
+              <div class="d-flex w-100 flex-wrap justify-content-between my-3">
                 <div class="col-md-8 text-center text-md-left d-flex align-items-center">
-                  <p class="text-logo-color fs-15 mb-0">Beyond Owl launch pad access</p>
+                  <i class="fa fa-circle text-logo-color mr-2"></i> <p class="text-logo-color fs-15 mb-0">Beyond Owl launch pad access</p>
                 </div>
                 <div class="col-md-4">
-                  <a  href="/assets/Beyond Owls Launchpad (1).pdf" target="_blank" class="btn btn-primary bg-gradient rounded-4 fs-15">Read
+                  <a  href="assets/Beyond Owls Launchpad (1).pdf" target="_blank" class="btn btn-primary bg-gradient rounded-4 fs-15">Read
                     more</a>
                 </div>
               </div>
-              <!-- <div class="d-flex w-100 flex-wrap justify-content-center my-5">
+              <div class="d-flex w-100 flex-wrap justify-content-center mt-5 mb-4">
                 <a routerLink="#" href="https://forms.gle/tttE2vRWUN2H9rLH9" target="_blank"
                   class="btn btn-primary bg-gradient rounded-4 fs-15 ">More Info</a>
-              </div> -->
+              </div>
 
 
             </div>
@@ -424,12 +424,12 @@
                     <!-- <p> Launching Wednesday, Nov. 2nd on Topaz.</p> -->
 
                     <a routerLink="/nft-collection"
-                      class="btn btn-primary bg-gradient rounded-4 fs-15 my-5 text-center text-capitalize">Beyond Owl launch pad</a>
+                      class="btn btn-primary bg-gradient rounded-4 fs-15 my-5 text-center text-capitalize">Mint</a>
 
                   </div>
                 </div>
                 <div class="col-md-4 d-flex align-items-center">
-                  <div class="nft-img bg-secondary w-250 shadow">
+                  <div class="nft-img w-250 shadow">
                     <img src="assets/2843.png" class="w-100 h-100" />
                   </div>
                 </div>
