--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -396,12 +396,12 @@
                   <i class="fa fa-circle text-logo-color mr-2"></i> <p class="text-logo-color fs-15 mb-0">Beyond Owl launch pad access</p>
                 </div>
                 <div class="col-md-4">
-                  <a  href="assets/Beyond Owls Launchpad (1).pdf" target="_blank" class="btn btn-primary bg-gradient rounded-4 fs-15">Read
+                  <a  href="assets/Beyond Owls Launchpad_03.pdf" target="_blank" class="btn btn-primary bg-gradient rounded-4 fs-15">Read
                     more</a>
                 </div>
               </div>
               <div class="d-flex w-100 flex-wrap justify-content-center mt-5 mb-4">
-                <a routerLink="#" href="https://forms.gle/tttE2vRWUN2H9rLH9" target="_blank"
+                <a  href="https://forms.gle/tttE2vRWUN2H9rLH9" target="_blank"
                   class="btn btn-primary bg-gradient rounded-4 fs-15 ">More Info</a>
               </div>
 
