home page updated, header section updated, nft collectios updated

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -375,7 +375,7 @@
                   <i class="fa fa-circle text-logo-color mr-2"></i> <p class="text-logo-color fs-15 mb-0"> Owly bird game double token rewards for NFT Holders</p>
                 </div>
                 <div class="col-md-4">
-                  <a  href="assets/Owly Bird Game.pdf" target="_blank" class="btn btn-primary bg-gradient rounded-4 fs-15">Read
+                  <a  href="assets/owly-bird-game.pdf" target="_blank" class="btn btn-primary bg-gradient rounded-4 fs-15">Read
                     more</a>
                 </div>
               </div>
@@ -385,7 +385,7 @@
                   <i class="fa fa-circle text-logo-color mr-2"></i>  <p class="text-logo-color fs-15 mb-0"> Algorithmic trading bot</p>
                 </div>
                 <div class="col-md-4">
-                  <a  href="assets/Algorithmic Trading Bot.pdf" target="_blank" class="btn btn-primary bg-gradient rounded-4 fs-15">Read
+                  <a  href="assets/algorithmic-trading-bot.pdf" target="_blank" class="btn btn-primary bg-gradient rounded-4 fs-15">Read
                     more</a>
                 </div>
               </div>
@@ -396,7 +396,7 @@
                   <i class="fa fa-circle text-logo-color mr-2"></i> <p class="text-logo-color fs-15 mb-0">Beyond Owl launch pad access</p>
                 </div>
                 <div class="col-md-4">
-                  <a  href="assets/Beyond Owls Launchpad_03.pdf" target="_blank" class="btn btn-primary bg-gradient rounded-4 fs-15">Read
+                  <a  href="assets/Beyond-Owls-Launchpad.pdf" target="_blank" class="btn btn-primary bg-gradient rounded-4 fs-15">Read
                     more</a>
                 </div>
               </div>
@@ -419,12 +419,12 @@
                   <h2 class="fw-bold text-white my-3">Beyond Owls</h2>
                   <div class="col-md-10 px-0">
                     <p class="text-white fw-light lh-2em"> 
-                      3000 utility based NFTs working hard for you on APTOs block chain. All 3000 NFts will give access to all programs that get release on the Owl platform
+                      3000 utility based NFTs working hard for you on APTOs block chain. Beyond Owl NFT's gives access to all programs that get released on the Owl Platform
                     </p>
                     <!-- <p> Launching Wednesday, Nov. 2nd on Topaz.</p> -->
 
                     <a routerLink="/nft-collection"
-                      class="btn btn-primary bg-gradient rounded-4 fs-15 my-5 text-center text-capitalize">Mint</a>
+                      class="btn btn-primary bg-gradient rounded-4 fs-15 my-5 text-center text-capitalize w-25">Mint</a>
 
                   </div>
                 </div>
