--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="header container-fluid" id="myHeader">
-  <div class="col-lg-5 d-flex flex-wrap align-items-center justify-content-lg-between">
+  <div class="col-lg-6 d-flex flex-wrap align-items-center justify-content-lg-between">
     <div class="mobile-nav mr-3">
       <div id="mobilemenu">
         <div id="mySidenav" class="sidenav">
@@ -527,7 +527,7 @@
     </a> &ndash;&gt;
   </div>-->
 
-  <div class="col-lg-6 d-lg-flex d-none align-items-center justify-content-end forlogin-nami pl-0">
+  <div class="col-lg-6 d-lg-flex d-none align-items-center justify-content-end forlogin-nami">
 
 
 
@@ -649,15 +649,15 @@
     </a> -->
 
     <button class="btn btn-primary bg-gradient d-flex align-items-center mx-2">
-      <a href="https://forms.gle/tttE2vRWUN2H9rLH9" target="_blank" class="fs-15 text-white text-decoration-none">Apply Launch Pad</a>
+      <a href="https://forms.gle/tttE2vRWUN2H9rLH9" target="_blank" class="fs-13 text-white text-decoration-none">Apply Launch Pad</a>
     </button>
 
     <div *ngIf="state$ | async; else elseBlock">
-      <button class="btn btn-primary bg-gradient d-flex align-items-center fs-15 mx-2">{{truncAddress(state$ | async)}}</button>
+      <button class="btn btn-primary bg-gradient d-flex align-items-center fs-13 mx-2">{{truncAddress(state$ | async)}}</button>
     </div>
 
     <ng-template #elseBlock>
-      <button class="btn btn-primary bg-gradient d-flex align-items-center fs-15 mx-2" (click)="openWalletDialog()">
+      <button class="btn btn-primary bg-gradient d-flex align-items-center fs-13 mx-2" (click)="openWalletDialog()">
         <div class="px-2">
           <svg height="20" width="20" fill="#FFF" data-name="Icon Logo" xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 60 60">
