--- a/src/app/components/nft-collection/nft-collection.component.html
+++ b/src/app/components/nft-collection/nft-collection.component.html
@@ -5,29 +5,59 @@
         <div class="d-flex w-100 flex-wrap bg-nft-box">
             <div class="col-xl-8 mx-auto d-flex align-items-center">
                 <div class="d-flex flex-wrap justify-contnet-center w-100">
-                    <div class="col-md-6 text-left">
+                    <div class="col-lg-6 col-md-12 text-left">
                         <h1 class="fs-30 fw-900">Beyond Owls</h1>
-                        <h2 class="heading-text">Whitelist minting opens in:</h2>
-                        <app-count-down></app-count-down>
+                        <div class="card mb-3 px-3 bg-dark-gray rounded">
+                            <div class="card-body">
+                                <h3 class="text-white mb-1 text-center">Whitelist minting opens in:</h3>
+                                <app-count-down [mintDate]="whitelistMintOpens"></app-count-down>
+                            </div>
+                        </div>
+                        <div class="card mb-3 px-3 bg-dark-gray rounded">
+                            <div class="card-body">
+                                <h3 class="text-white mb-1 text-center">Public minting opens in:</h3>
+                                <app-count-down [mintDate]="publicMintOpens"></app-count-down>
+                            </div>
+                        </div>
+                        <div class="card mb-3 px-3 bg-dark-gray rounded">
+                            <div class="card-body">
+                                <h3 class="text-white mb-1 text-center">Sale End:</h3>
+                                <app-count-down [mintDate]="saleEnd"></app-count-down>
+                            </div>
+                        </div>
+
+                        <div class="d-flex w-100 justify-content-center">
+                            <button class="btn btn-primary bg-gradient fs-15 w-25">Mint</button>
+                        </div>
+
+                        <p class="my-3 text-center">Max mint: 3 per wallet</p>
+
+                        <p class="text-white text-center fs-15">Minted (0/3000)</p>
+
                         <div class="line-splitter"></div>
 
-                        <p class="fs-25 lh-3">Beyond owl NFTs will give you access to all programs that get released on the owl platform.</p>
-                        <p class="fs-25 lh-3">Apply launchpad</p>
+                        <p class="fs-25 lh-3">Beyond owl NFTs will give you access to all programs that get released on
+                            the owl platform.</p>
+                        <div class="d-flex w-100 justify-content-center">
+                            <button class="btn btn-primary bg-gradient fs-15 w-25">Mint</button>
+                        </div>
 
                         <div class="d-flex justify-content-start">
                             <div class="bg-secondary rounded fs-16 p-3 m-2">
-                              <i class='fas fa-globe'></i>
+                                <i class='fas fa-globe'></i>
                             </div>
                             <div class="bg-secondary rounded fs-16 p-3 m-2">
-                                <a href="https://twitter.com/Beyondowl" class="text-decoration-none text-white" target="_blank"><i class='fab fa-twitter'></i></a>
+                                <a href="https://twitter.com/Beyondowl" class="text-decoration-none text-white"
+                                    target="_blank"><i class='fab fa-twitter'></i></a>
                             </div>
                             <div class="bg-secondary rounded fs-16 p-3 m-2">
-                                <a href="https://discord.com/invite/FDe2E2XsCJ" class="text-decoration-none text-white" target="_blank"> <i class='fab fa-discord'></i></a>
+                                <a href="https://discord.com/invite/FDe2E2XsCJ" class="text-decoration-none text-white"
+                                    target="_blank"> <i class='fab fa-discord'></i></a>
                             </div>
-                        </div>    
+                        </div>
 
                     </div>
-                    <div class="col-md-6 d-flex align-items-center">
+                    <div class="col-lg-6 col-md-12 d-flex align-items-center">
                         <div class="nft-img bg-secondary shadow  mx-auto">
                             <img src="assets/2843.png" class="w-100 h-100" />
                         </div>
@@ -48,8 +78,8 @@
                 <div class="line-splitter"></div>
             </div>
 
-            <div class="row mt-5 mb-5">
-                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12">
+            <div class="d-flex flex-wrap w-100 justify-content-start">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 d-flex align-items-strech">
                     <div class="tab flex-column align-items-center position-relative">
                         <h3 class="text-uppercase title-tripy"> Beyond Owl</h3>
                         <button class="sync-icon" mat-raised-button (click)="syncNamiWallet()"
@@ -99,7 +129,7 @@
                     </div>
                 </div>
 
-                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12">
+                <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 d-flex align-items-strech">
                     <div class="tab flex-column align-items-center">
                         <a href="/#/moonverse">
                             <h3 class="text-uppercase clr-white">Beyond Deed</h3>
