nft page updated image

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="header container-fluid" id="myHeader">
-  <div class="col-lg-6 d-flex flex-wrap align-items-center justify-content-lg-between">
+  <div class="col-lg-6 pl-md-0 d-flex flex-wrap align-items-center justify-content-lg-between">
     <div class="mobile-nav mr-3">
       <div id="mobilemenu">
         <div id="mySidenav" class="sidenav">
@@ -657,7 +657,7 @@
     </div>
 
     <ng-template #elseBlock>
-      <button class="btn btn-primary bg-gradient d-flex align-items-center fs-13 mx-2" (click)="openWalletDialog()">
+      <button class="btn btn-primary bg-gradient d-flex align-items-center fs-15 mx-2" (click)="openWalletDialog()">
         <div class="px-2">
           <svg height="20" width="20" fill="#FFF" data-name="Icon Logo" xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 60 60">
