--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -170,7 +170,8 @@ button {
 
 .homeBgVideo {
   width: 100%;
-  height: calc(100vh - 75px) !important;
+  // height: calc(100vh - 75px) !important;
+  height: 100%;
   object-fit: unset;
 }
 
@@ -829,5 +830,10 @@ button {
 @media only screen and (min-width:319px) and (max-width:768px){
   .green_logo {
     width: 100%;
+  }
+  .homeBgVideo {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
   }
 }
