--- a/src/app/components/nft-collection/nft-collection.component.html
+++ b/src/app/components/nft-collection/nft-collection.component.html
@@ -130,12 +130,12 @@
                 </div>
 
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-12 col-xs-12 d-flex align-items-strech">
-                    <div class="tab flex-column align-items-center">
+                    <div class="tab">
                         <a href="/#/moonverse">
-                            <h3 class="text-uppercase clr-white">Beyond Deed</h3>
+                            <h3 class="text-uppercase clr-white">egg</h3>
 
                             <div class="trippy-box">
-                                <img class="img-responsive nft-img" alt="NFTs" src="assets/beyond_deed.jpg" />
+                                <img class="img-responsive nft-img" alt="NFTs" src="assets/dragon_egg_4.gif" />
                             </div>
 
                         </a>
