updated beyond owl pdf, removed view all button from card NFt collection

--- a/src/app/components/nft-collection/nft-collection.component.html
+++ b/src/app/components/nft-collection/nft-collection.component.html
@@ -88,9 +88,9 @@
                         </button>
                         <div
                             class="d-flex justify-content-between w-100 flex-column flex-md-row flex-lg-column flex-xl-row align-items-center">
-                            <a href="/#/trippy-owl-listing" class="btn btn-secondary tab-button border-0">
+                            <!-- <a href="/#/trippy-owl-listing" class="btn btn-secondary tab-button border-0">
                                 View all
-                            </a>
+                            </a> -->
                             <!-- <a
                         href="javascript:void(0)"
                         class="btn btn-primary tab-button border-0 tealcolor"
