--- a/src/app/components/nft-collection/nft-collection.component.html
+++ b/src/app/components/nft-collection/nft-collection.component.html
@@ -74,7 +74,7 @@
             </div>
             <div class="heading">
                 <div class="line-splitter"></div>
-                <h1 class="heading-text">Beyond Moon Collection</h1>
+                <h1 class="heading-text">Beyond Owl Collection</h1>
                 <div class="line-splitter"></div>
             </div>
 
