--- a/src/app/components/nft-collection/nft-collection.component.html
+++ b/src/app/components/nft-collection/nft-collection.component.html
@@ -38,8 +38,9 @@
 
                         <p class="fs-25 lh-3">Beyond owl NFTs will give you access to all programs that get released on
                             the owl platform.</p>
-                        <div class="d-flex w-100 justify-content-center">
-                            <button class="btn btn-primary bg-gradient fs-15 w-25">Mint</button>
+                        <div class="d-flex w-100 justify-content-start mb-2">
+                            <button class="btn btn-primary bg-gradient fs-15 w-25 m-2">Mint</button>
+                            <a href="https://www.topaz.so/" class="btn btn-primary bg-gradient fs-15 m-2">View Collection</a>
                         </div>
 
                         <div class="d-flex justify-content-start">
