--- a/src/app/components/nft-collection/nft-collection.component.html
+++ b/src/app/components/nft-collection/nft-collection.component.html
@@ -7,25 +7,12 @@
                 <div class="d-flex flex-wrap justify-contnet-center w-100">
                     <div class="col-lg-6 col-md-12 text-left">
                         <h1 class="fs-30 fw-900">Beyond Owls</h1>
-                        <div class="card mb-3 px-3 bg-dark-gray rounded">
+                        <div class="card mb-3 px-3 bg-dark-gray rounded" *ngFor="let item of launches">
                             <div class="card-body">
-                                <h3 class="text-white mb-1 text-center">Whitelist minting opens in:</h3>
-                                <app-count-down [mintDate]="whitelistMintOpens"></app-count-down>
+                                <h3 class="text-white mb-1 text-center">{{item.name}}:</h3>
+                                <app-count-down [mintDate]="item.launchDate"></app-count-down>
                             </div>
                         </div>
-                        <div class="card mb-3 px-3 bg-dark-gray rounded">
-                            <div class="card-body">
-                                <h3 class="text-white mb-1 text-center">Public minting opens in:</h3>
-                                <app-count-down [mintDate]="publicMintOpens"></app-count-down>
-                            </div>
-                        </div>
-                        <div class="card mb-3 px-3 bg-dark-gray rounded">
-                            <div class="card-body">
-                                <h3 class="text-white mb-1 text-center">Sale End:</h3>
-                                <app-count-down [mintDate]="saleEnd"></app-count-down>
-                            </div>
-                        </div>
-
                         <div class="d-flex w-100 justify-content-center">
                             <button class="btn btn-primary bg-gradient fs-15 w-25">Mint</button>
                         </div>
